--- a/config.json
+++ b/config.json
@@ -1,19 +1,32 @@
 {
   "name": "Leila Guimarães",
-  "job": "Desenvolvedora font-end",
-  "bg":"https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80",
+  "job": "Desenvolvedora front-end",
+  "bg":"https://images.unsplash.com/photo-1491147334573-44cbb4602074?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80",
   "github": "leilaguimaraes",
-  "favoritos": 
-    [{
-        "nome":"Mario Souto",
-        "fotodeperfil": "https://yt3.ggpht.com/m8Yrqf0Y81L4mZ1Cq7rGnJ4NDHe6…a7J8NWpN1axMHcCb1oKJNgA=s48-c-k-c0x00ffffff-no-rj"
-    },
-    {
-        "nome":"Jovem Nerd",
-        "fotodeperfil": "https://yt3.ggpht.com/ytc/AMLnZu9pDOp93R9V0cp_CodoiMk8FM60-46FkdDasQ1i=s88-c-k-c0x00ffffff-no-rj"
-    }
-    ]
-  ,
+  "favorites":{
+    "Favorites": [
+        {
+            "title": "@omariosouto",
+            "url": "https://github.com/omariosouto",
+            "thumb": "https://github.com/omariosouto.png"
+        },
+        {
+            "title": "@peas",
+            "url": "https://github.com/peas",
+            "thumb": "https://github.com/peas.png"
+        },
+        {
+            "title": "@NayanneBatista",
+            "url": "https://github.com/NayanneBatista",
+            "thumb": "https://github.com/NayanneBatista.png"
+        },
+        {
+            "title": "@leilaguimaraes",
+            "url": "https://github.com/leilaguimaraes",
+            "thumb": "https://github.com/leilaguimaraes.png"
+        }
+    ]},
+    
   "playlists": {
     "jogos": [
         {
